--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,7 @@
 
       <div id="carousel_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="carousel_widget" data-ur-state="enabled">
 
-        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
+        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones=5>
           <span data-ur-carousel-component="count"> -- count -- </span>
           <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
             Prev
