Use variables for main color

--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
 </div><!-- top_wrapper-->
 <div id="textbody">
  
-  <h1>Top ways to use Uranium</h1>
+  <h1>Top ways to use Plutonium</h1>
   <!-- Test -->
   <div class="demonstration">
     <h2> Carousel </h2>
