Setting up interactions version of Uranium site.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ home_selected: selected
   <div class="demonstration">
     <h2> Carousel </h2>
     <div id="carousel_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_widget" data-ur-state="enabled"> Widget</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_widget" data-ur-state="enabled"> Interaction</h3>
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_html">HTML</h3>
 
@@ -82,7 +82,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
 {% endhighlight %}
       </div>
     </div>
-    <a href="/widgets/carousel.html" class="see_more_link">
+    <a href="/interactions/carousel.html" class="see_more_link">
       More about carousel
     </a>
     <hr />
@@ -137,7 +137,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
 {% endhighlight %}
       </div>
     </div>
-    <a href="/widgets/tabs.html" class="see_more_link">
+    <a href="/interactions/tabs.html" class="see_more_link">
       More about Tabs
     </a>
     <hr />
@@ -180,7 +180,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
 {% endhighlight %}
       </div>
     </div>
-    <a href="/widgets/toggler.html" class="see_more_link">
+    <a href="/interactions/toggler.html" class="see_more_link">
       More about Toggler
     </a>
     <hr />
