--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" class="selected"></a><div class='menu_widget'>	<a href="/widget_list.html" >Widgets</a>	<ul>		<li><a href="/widgets/carousel.html">Carousel</a></li>		<li><a href="/widgets/input_clear.html">Input Clear</a></li>		<li><a href="/widgets/geocode.html">Geolocation</a></li>		<li><a href="/widgets/tabs.html">Tabs</a></li>		<li><a href="/widgets/toggler.html">Toggler</a></li>		<li><a href="/widgets/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
+  <a href="/" id="uraniumlogo" class="selected"></a><div class='menu_widget'>	<a href="/interaction_list.html" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
 </nav>
 
     <div class="top_wrapper desktop">
@@ -23,12 +23,12 @@
 </div><!-- top_wrapper-->
 <div id="textbody">
  
-  <h1>Top ways to use Plutonium</h1>
+  <h1>Top ways to use Uranium</h1>
   <!-- Test -->
   <div class="demonstration">
     <h2> Carousel </h2>
     <div id="carousel_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_widget" data-ur-state="enabled"> Widget</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_widget" data-ur-state="enabled"> Interaction</h3>
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_html">HTML</h3>
 
@@ -93,7 +93,7 @@
 </code></pre></div>
       </div>
     </div>
-    <a href="/widgets/carousel.html" class="see_more_link">
+    <a href="/interactions/carousel.html" class="see_more_link">
       More about carousel
     </a>
     <hr />
@@ -147,7 +147,7 @@
 </code></pre></div>
       </div>
     </div>
-    <a href="/widgets/tabs.html" class="see_more_link">
+    <a href="/interactions/tabs.html" class="see_more_link">
       More about Tabs
     </a>
     <hr />
@@ -189,7 +189,7 @@
 </code></pre></div>
       </div>
     </div>
-    <a href="/widgets/toggler.html" class="see_more_link">
+    <a href="/interactions/toggler.html" class="see_more_link">
       More about Toggler
     </a>
     <hr />
