--- a/site/interaction_list.html
+++ b/site/interaction_list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-<title>Uranium JS | Widget List</title>
+<title>Uranium JS | Interaction List</title>
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
 <script src="/src/jquery-1.9.1.js"></script>
@@ -11,24 +11,24 @@
 
   </head>
   
-  <body id="widget_list_page">
+  <body id="interaction_list_page">
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
+  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" class="selected">Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
 </nav>
 
     <div id="textbody">
   <h1>Widgets</h1>
-  <div id="widget_detail">
+  <div id="interaction_detail">
     <h2>Widgets Included in Uranium</h2>
     <ul>
-      <li> <a href="widgets/carousel.html"> Carousel </a> </li>
-      <li> <a href="widgets/input_clear.html"> Input Clear </a> </li>
-      <li> <a href="widgets/geocode.html"> Geolocation </a></li>
-      <li> <a href="widgets/tabs.html"> Tabs </a> </li>
-      <li> <a href="widgets/toggler.html"> Toggler </a> </li>
-      <li> <a href="widgets/zoom.html"> Zoom </a></li>
+      <li> <a href="interactions/carousel.html"> Carousel </a> </li>
+      <li> <a href="interactions/input_clear.html"> Input Clear </a> </li>
+      <li> <a href="interactions/geocode.html"> Geolocation </a></li>
+      <li> <a href="interactions/tabs.html"> Tabs </a> </li>
+      <li> <a href="interactions/toggler.html"> Toggler </a> </li>
+      <li> <a href="interactions/zoom.html"> Zoom </a></li>
     </ul>
   </div>
   <div>
