--- a/interactions/geocode/button.html
+++ b/interactions/geocode/button.html
@@ -1,17 +1,16 @@
 ---
-layout: geocode-widget-sub
+layout: geocode-interaction-sub
 title: Geocode Button
 name: geocode_button
-widget_selected: selected
+interaction_selected: selected
 ---
 <div class="wrapper">
   <h1> Geolocation with a Button </h1>
   
   <h2>Description</h2>
-  <p>
-  Here, instead of the widget loading automatically (as on the <a href="geocode.html">widget page</a>), we
-  have a button that needs to be clicked in order for it to be activated.
-  </p>
+  <p> Here, instead of the interaction loading automatically (as on the <a href="geocode.html">interaction page</a>), we
+  have a button that needs to be clicked in order for it to be activated. </p>
+  <p> We recommend using a button to enable geolocation, especially if designing for mobile. If geocoding happens on page load, the user will see a popup asking the site to use their location. If they click "no," it is difficult to get the information later on. That is why it is best to get geo-data only when a user requests it.</p>
     
   <h2>Components</h2>
   <p>We need to include a button (rather obviously) for this example to work. Here is the extra attribute
@@ -27,9 +26,8 @@ widget_selected: selected
     <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
     <div id="geocode_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
-      <div data-ur-set="reverse-geocode">
-        <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
-        <form action="geocode_submit" method="get" accept-charset="utf-8" >
+        <form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
+            <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
           <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
           <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
           <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
@@ -333,33 +331,28 @@ widget_selected: selected
             <option value="Zimbabwe">Zimbabwe</option>
           </select>
         </form>
-      </div>
     </div>
 
     <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
 {% highlight html %}
-<div data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled" class="example_widget">
-  <div data-ur-set="reverse-geocode">
-    <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
-    <form action="geocode_submit" method="get" accept-charset="utf-8" >
-      <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
-      <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
-      <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
-      <select name="state" id="state" data-ur-reverse-geocode-component="rg-state">
-        <option value="">None</option>
-        <option value="AL">Alabama</option>
-        <option value="AK">Alaska</option>
-        ...
-      </select>
-      <select name="country" id="country" data-ur-reverse-geocode-component="rg-country">
-        <option value="" selected="selected">Select Country</option>
-        <option value="United States">United States</option>
-        <option value="United Kingdom">United Kingdom</option>
-        ...
-      </select>
-    </form>
-  </div>
-</div>
+<form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
+  <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
+  <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
+  <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
+  <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
+  <select name="state" id="state" data-ur-reverse-geocode-component="rg-state">
+    <option value="">None</option>
+    <option value="AL">Alabama</option>
+    <option value="AK">Alaska</option>
+    ...
+  </select>
+  <select name="country" id="country" data-ur-reverse-geocode-component="rg-country">
+    <option value="" selected="selected">Select Country</option>
+    <option value="United States">United States</option>
+    <option value="United Kingdom">United Kingdom</option>
+    ...
+  </select>
+</form>
 {% endhighlight %}
     </div>
     <hr />
