Updating the site directory

--- a/widgets/carousel.html
+++ b/widgets/carousel.html
@@ -1,10 +1,10 @@
 ---
-layout: widgets
+layout: interactions
 title: Carousel
 name: carousel
-widget_selected: selected
+interaction_selected: selected
 description: |
-    <p>The carousel is a widget that allows horizontal scrolling (with touch or buttons) between a set of items.</p>
+    <p>The carousel is an interaction that allows horizontal scrolling (with touch or buttons) between a set of items.</p>
     <p>The CSS we need to use here is pretty picky, so make sure to check out the CSS tab below.</p>
     <p>The compatibility of this with FireFox is adequate (vertical-scroll: enabled is not supported however). Check out our compatibility tables to see which devices and browsers will display the carousel.</p>
 basic_tab:
@@ -249,6 +249,7 @@ instance:
         </div>
 
       </div>
+
       <hr />
     </div>
     <div>
