--- a/site/widgets/carousel.html
+++ b/site/widgets/carousel.html
@@ -12,11 +12,11 @@
     <link href="/stylesheets/jasmine.css" rel="stylesheet" />
   </head>
   
-  <body id="carousel_page" class="widget_page">
+  <body id="carousel_page" class="interaction_page">
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
+  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" class="selected">Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
 </nav>
 
     <div id="textbody">
@@ -27,7 +27,7 @@
         <div class="description_wrapper">
           <h2> Description </h2>
           <div class="description">
-            <p>The carousel is a widget that allows horizontal scrolling (with touch or buttons) between a set of items.</p>
+            <p>The carousel is an interaction that allows horizontal scrolling (with touch or buttons) between a set of items.</p>
 <p>The CSS we need to use here is pretty picky, so make sure to check out the CSS tab below.</p>
 <p>The compatibility of this with FireFox is adequate (vertical-scroll: enabled is not supported however). Check out our compatibility tables to see which devices and browsers will display the carousel.</p>
 
@@ -465,6 +465,7 @@
         </div>
 
       </div>
+
       <hr />
     </div>
     <div>
