--- a/site/tutorials/advanced.html
+++ b/site/tutorials/advanced.html
@@ -15,7 +15,7 @@
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
+  <a href="/" id="uraniumlogo" ></a><div class='menu_widget'>	<a href="/interaction_list.html" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li><li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></div><a href="/about.html" >About</a>
 </nav>
 
     
@@ -24,7 +24,7 @@
   <br />
   <a id="moovweblogo" href="http://www.moovweb.com/"><img src="/images/moovweblogo.png" alt="Moovweb" /></a>
   <nav>
-    Uranium &copy; 2012 |
+    Uranium &copy; 2013 |
     <a href="https://github.com/moovweb/uranium">GitHub</a> |
     <a href="mailto:uranium@moovweb.com">Contact</a>
   </nav>
