--- a/site/interactions/geocode/text_inputs.html
+++ b/site/interactions/geocode/text_inputs.html
@@ -17,7 +17,7 @@
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
     <nav id="menu">
       
-      <a href="/" id="uraniumlogo" ></a><div class='menu_widget'><a href="/interaction_list.html" class="selected">Interactions</a><ul><li><a href="/interactions/carousel.html">Carousel</a></li><li><a href="/interactions/input_clear.html">Input Clear</a></li><li><a href="/interactions/geocode.html">Geolocation</a></li><li><a href="/interactions/tabs.html">Tabs</a></li><li><a href="/interactions/toggler.html">Toggler</a></li><li><a href="/interactions/zoom.html">Zoom</a></li></ul></div><a href="/about.html" >About</a>
+      <a href="/" id="uraniumlogo" ></a><div class='menu_widget'><a href="/interaction_list.html" class="selected">Interactions</a><ul><li><a href="/interactions/carousel.html">Carousel</a></li><li><a href="/interactions/geocode.html">Geolocation</a></li><li><a href="/interactions/input_clear.html">Input Clear</a></li><li><a href="/interactions/tabs.html">Tabs</a></li><li><a href="/interactions/toggler.html">Toggler</a></li><li><a href="/interactions/zoom.html">Zoom</a></li></ul></div><a href="/about.html" >About</a>
     </nav>
 
     <div id="textbody">
@@ -40,6 +40,7 @@
     <div id="geocode_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
         <form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
           <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
+          <br/>
           <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
           <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
           <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
